@@ -1,8 +1,9 @@
 --- v0.08 (WIP)
 
 * Rewrite the IM_ALLOC/IM_FREE macros to call the C versions of the respective functions, and rename them to
-  CIM_ALLOC and CIM_FREE to avoid conflicting with the original defines in #imgui.h
+  CIM_ALLOC and CIM_FREE to avoid conflicting with the original defines in #imgui.h (#69)
 * Remove IM_NEW/IM_PLACEMENT_NEW defines as they don't make sense outside of C++
+* Fixed IMGUI_CHECKVERSION to use the correct function, and renamed to CIMGUI_CHECKVERSION (#69)
 
 --- v0.07
 
